--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,7 +10,7 @@ main:
   - name: Skills
     url: '#skills'
     weight: 20
-  - name: Experiences
+  - name: experiences
     url: '#experiences'
     weight: 30
   - name: Awards & Honours
