--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#skills'
     weight: 20
   - name: Experiences
-    url: '#experiences'
+    url: '#Experiences'
     weight: 30
   - name: Awards & Honours
     url: '#awards'
