--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -9,6 +9,7 @@ main:
     weight: 10
   - name: Experience
     url: '#experiences'
+    weight: 20
   - name: Contact
     url: '#contact'
     weight: 40
