--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,9 @@ main:
   - name: Experience
     url: '#experiences'
     weight: 20
+  - name: Awards & Honours
+    url: '#awards'
+    weight: 30
   - name: Contact
     url: '#contact'
     weight: 40
