--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,8 +10,8 @@ main:
   - name: Experience
     url: '#experiences'
     weight: 20
-  - name: Awards
-    url: '#awards'
+  - name: award
+    url: '#award'
     weight: 30
   - name: Contact
     url: '#contact'
