--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,7 +10,7 @@ main:
   - name: Experience
     url: '#experiences'
     weight: 20
-  - name: award
+  - name: Award
     url: '#award'
     weight: 30
   - name: Contact
