--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,6 +7,8 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Tools
+    url: '#tools'
   - name: Experiences
     url: '#experiences'
     weight: 20
