--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -9,16 +9,19 @@ main:
     weight: 10
   - name: Tools
     url: '#tools'
-    weight: 15
+    weight: 20
+  - name: Skills
+    url: '#skills'
+    weight: 30
   - name: Experiences
     url: '#experiences'
-    weight: 20
+    weight: 40
   - name: Awards
     url: '#award'
-    weight: 30
+    weight: 50
   - name: Contact
     url: '#contact'
-    weight: 40
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
