--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Tools
-    url: '#tools'
+    url: '#tools.md'
     weight: 20
   - name: Skills
     url: '#skills'
