--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,10 +8,10 @@ main:
     url: '#about'
     weight: 10
   - name: Tools
-    url: '#tools'
+    url: /#section-1
     weight: 20
   - name: Skills
-    url: '#skills'
+    url: /#section-2
     weight: 30
   - name: Experiences
     url: '#experiences'
