--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Academic # Website name
-baseURL: 'https://www.justinwurtzel.com/' # Website URL
+baseURL: 'https://www.justinianwurtzel.com/' # Website URL
 
 ############################
 ## LANGUAGE
